<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HivePulse</string>

    <!-- Screens -->
    <string name="screen_apiaries">My Apiaries</string>
    <string name="screen_register">Create Account</string>
    <string name="screen_initialize_hive">Initialize Hive</string>
    <string name="screen_hive_stats">Hive Statistics</string>
    <string name="screen_settings">Settings</string>
    <string name="screen_scan_qr">Scan QR Code</string>
    <string name="screen_batch_detail">Batch Detail</string>
...
    <string name="tab_apiaries">Apiaries</string>
    <string name="tab_scan_short">Scan</string>
    <string name="tab_scan">Scan QR code</string>
    <string name="tab_settings">Settings</string>

    <!-- Actions -->
    <string name="action_save">Save</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_login">Sign In</string>
...
    <string name="action_register">Create an account</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_help">Help &amp; Documentation</string>
    <string name="url_help">https://hivepulse.multihead.de/en/help</string>
    <string name="action_new_apiary">New Apiary</string>
    <string name="action_edit_apiary">Edit Apiary</string>
    <string name="action_new_hive">New Hive</string>
    <string name="action_new_inspection">New Inspection</string>
    <string name="action_edit_inspection">Edit Inspection</string>
    <string name="action_stats">Statistics</string>
    <string name="action_view_qr">View QR Code</string>
    <string name="action_apply">Apply</string>
    <string name="action_new_batch">New QR Batch</string>
...
